--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,16 +310,28 @@ ul {
 }
 
 .mobile-nav-toggle.bi-x {
-  color: #fff;
+  color: #000;
 }
 
 @media (max-width: 991px) {
+  .navbar{
+    overflow: hidden;
+  }
   .mobile-nav-toggle {
     display: block;
   }
 
   .navbar ul {
-    display: none;
+    position: absolute;
+    left: 100%;
+    padding-left: 40px;
+  }
+  .product-slider .icon-box{
+    min-height: auto !important;
+  }
+  .product-slider .icon img{
+    height: auto !important;
+    object-fit: contain;
   }
 }
 
@@ -344,14 +356,11 @@ ul {
 .navbar-mobile ul {
   display: block;
   position: absolute;
-  top: 55px;
-  right: 15px;
-  bottom: 15px;
-  left: 15px;
+  inset: 0;
   padding: 10px 0;
   background-color: #fff;
   overflow-y: auto;
-  transition: 0.3s;
+  transition: 1s;
 }
 
 .navbar-mobile a,
@@ -470,7 +479,9 @@ ul {
   background-size: 100% 100%;
   min-height: 500px;
 }
-
+#hero .carousel-inner .carousel-item .col-lg-6 {
+  padding-left: 36px;
+}
 #hero .carousel-inner .carousel-item,
 #hero .carousel-inner .active.carousel-item-start,
 #hero .carousel-inner .active.carousel-item-end {
@@ -632,7 +643,7 @@ section {
   transition: all ease-in-out 0.3s;
   background: #fff;
   position: relative;
-  min-height: 490px;
+  min-height: 370px;
 }
 
 .product-slider .icon-box:hover {
@@ -659,6 +670,7 @@ section {
 .product-slider .icon img {
   height: 222px;
   width: 100%;
+  object-fit: contain;
 }
 
 .product-slider .title a {
@@ -1010,6 +1022,7 @@ section {
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   position: relative;
   background: #fff;
+  height: 260px;
 }
 
 .testimonials .testimonial-item .testimonial-img {
@@ -1555,8 +1568,19 @@ section {
   justify-content: center;
 }
 
+@media (max-width: 1000px) {
+  .product-title-img {
+    background-position-x: -105%;
+  }
+}
 
-@media (max-width: 1200px) {
+@media (max-width: 800px) {
+  .product-title-img {
+    background-position-x: -90%;
+  }
+}
+
+@media (max-width: 500px) {
   .product-title-img {
     background-position-x: -48%;
   }
@@ -1565,5 +1589,11 @@ section {
 @media (max-width: 600px) {
   #hero {
     height: 475px;
+  }
+  .product_range .product-range-image img{
+    margin:10px auto;
+  }
+  .product-slider .icon-box{
+    min-height: auto;
   }
 }
