--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,7 @@ ul {
   margin-left: 15px;
 }
 
-#topbar .social-links a, #topbar a svg path {
-  fill: #6f6f6f;
+#topbar .social-links a {
   color: #6f6f6f;
   padding: 4px 12px;
   display: inline-block;
@@ -118,8 +117,7 @@ ul {
   transition: 0.3s;
 }
 
-#topbar .social-links a:hover, #topbar a:hover svg path {
-  fill:#0073ab;
+#topbar .social-links a:hover {
   color: #0073ab;
 }
 
@@ -1531,8 +1529,7 @@ section {
   margin: 0 0 40px 0;
 }
 
-#footer .social-links a, a svg path {
-  fill: #fff;
+#footer .social-links a {
   font-size: 18px;
   display: inline-block;
   background: #0073ab;
@@ -1547,8 +1544,7 @@ section {
   transition: 0.3s;
 }
 
-#footer .social-links a:hover, #footer a:hover svg path {
-  fill:#0073ab;
+#footer .social-links a:hover {
   background-color: #fff;
   color: #0073ab;
   text-decoration: none;
